test: replace e2e coverage with mvc tests